syntax = "proto3";
package model;
message Community {
	uint32 ID = 1;
	uint64 CreatedAt = 2;
	uint64 UpdatedAt = 3;
	uint64 DeletedAt = 4;
	int32 CommunityId = 5;  //社区id
	string CommunityName = 6;  //社区名称
	int32 FkRegionId = 7;  //行政地区id
	int32 CoverPeopleNum = 8;  //覆盖人数
	string HomeImageId = 9;  //主页图片地址
	string DescImageId = 10;  //介绍图片地址
	string DescText = 11;  //介绍文本
	double Longitude = 12;  //经度
	double Latitude = 13;  //纬度
}

message Convenience {
	uint32 ID = 1;
	uint64 CreatedAt = 2;
	uint64 UpdatedAt = 3;
	uint64 DeletedAt = 4;
	int32 ConvenienceId = 5;  //便民信息ID
	int32 FkUserId = 6;  //发布人ID
	string UserName = 7;  //发布人昵称
	int32 FkConfigId = 8;  //配置id
	int32 Type = 9;  //便民信息类型
	string Title = 10;  //标题
	string Content = 11;  //内容
	string ImageIds = 12;  //相关图片地址,用'|'隔开
}

message WebQuestion {
	uint32 ID = 1;
	uint64 CreatedAt = 2;
	uint64 UpdatedAt = 3;
	uint64 DeletedAt = 4;
	int32 QuestionId = 5;  //题问id
	int32 FkUserId = 6;  //题问人的id
	string UserName = 7;  //提问人昵称
	int32 FkConfigId = 8;  //什么配置id
	int32 Type = 9;  //题问类型
	string Title = 10;  //标题
	string Content = 11;  //内容
	int32 ImageIds = 12;  //图片id
}

message ConvenienceComment {
	uint32 ID = 1;
	uint64 CreatedAt = 2;
	uint64 UpdatedAt = 3;
	uint64 DeletedAt = 4;
	int32 CommentId = 5;  //评论ID
	int32 FkConvenienceId = 6;  //被评论的便民信息ID
	int32 FkUserId = 7;  //评论人ID
	string UserName = 8;  //评论人昵称
	string Content = 9;  //评论内容
}

message Interact {
	uint32 ID = 1;
	uint64 CreatedAt = 2;
	uint64 UpdatedAt = 3;
	uint64 DeletedAt = 4;
	int32 InteractId = 5;  //互动主题ID
	int32 FkUserId = 6;  //发布人id
	string UserName = 7;  //发布人昵称
	int32 FkPlotId = 8;  //发布小区id
	string PlotName = 9;  //发布小区名称
	string Title = 10;  //标题
	string Content = 11;  //内容
	string ImageIds = 12;  //相关图片地址
	int32 ViewNum = 13;  //浏览量
	int32 CommentNum = 14;  //评论数
}

message InteractComment {
	uint32 ID = 1;
	uint64 CreatedAt = 2;
	uint64 UpdatedAt = 3;
	uint64 DeletedAt = 4;
	int32 CommentId = 5;  //评论id
	int32 InteractId = 6;  //被评论的主题id
	int32 FkUserId = 7;  //评论id
	string UserName = 8;  //评论人昵称
	string Content = 9;  //内容
}

message Notice {
	uint32 ID = 1;
	uint64 CreatedAt = 2;
	uint64 UpdatedAt = 3;
	uint64 DeletedAt = 4;
	int32 FkPlotId = 5;  //通知小区id
	string PlotName = 6;  //通知小区名称
	int32 CommunityId = 7;  //社区id
	string CommunityName = 8;  //社区名称
	int32 FkUserId = 9;  //发布人id
	string UserName = 10;  //发布人姓名
	string Inscribe = 11;  //落款单位
	int32 Type = 12;  //类型
	string Content = 13;  //内容
	int32 Status = 14;  //状态
}

message QuestionComment {
	uint32 ID = 1;
	uint64 CreatedAt = 2;
	uint64 UpdatedAt = 3;
	uint64 DeletedAt = 4;
	int32 CommentId = 5;  //评论id
	int32 FkUserId = 6;  //评论人id
	string UserName = 7;  //评论人姓名
	int32 FkQuestionId = 8;  //被评论的问题id
	string Content = 9;  //内容
}

message Estate {
	uint32 ID = 1;
	uint64 CreatedAt = 2;
	uint64 UpdatedAt = 3;
	uint64 DeletedAt = 4;
	int32 EstateId = 5;  //物业id
	string EstateName = 6;  //物业名称
}

message Plot {
	uint32 ID = 1;
	uint64 CreatedAt = 2;
	uint64 UpdatedAt = 3;
	uint64 DeletedAt = 4;
	int32 PlotId = 5;  // 小区id
	string PlotName = 6;  //小区名称
	int32 FkRegionId = 7;  //所属行政区域id
	int32 FkEstateId = 8;  //物业公司ID
	string EstateName = 9;  //物业公司名称
	int32 FkCommunityId = 10;  //所属社区id
	string CommunityName = 11;  //所属社区名称
	int32 CoverPeopleNum = 12;  //覆盖人群
	int32 HomeImageId = 13;  //主页图片id
	int32 DescImageId = 14;  //介绍图片id
	string DescText = 15;  //介绍文本
	double Longitude = 16;  //经度
	double Latitude = 17;  //纬度
}

message Region {
	uint32 ID = 1;
	uint64 CreatedAt = 2;
	uint64 UpdatedAt = 3;
	uint64 DeletedAt = 4;
	string Name = 5;  
	string Code = 6;  //通用码
	string PostCode = 7;  //邮政编码
	int32 ParentId = 8;  
	int32 IsTopLevel = 9;  //是否为最高级,用于嵌套查询
}

message UserIdentify {
	uint32 ID = 1;
	uint64 CreatedAt = 2;
	uint64 UpdatedAt = 3;
	uint64 DeletedAt = 4;
	int32 UserIdentifyId = 5;  //认证信息ID
	int32 FkUserId = 6;  //被认证的用户id
	string UserName = 7;  //用户姓名
	string Status = 8;  //状态
	string Type = 9;  //类型
	string TelNumber = 10;  //电话号码
	string Province = 11;  //省
	string City = 12;  //市
	string District = 13;  //区
	string Community = 14;  //社区
	string Plot = 15;  //小区
}

